Fix overflow error

--- a/client/src/pages/ContentList/searchContent.css
+++ b/client/src/pages/ContentList/searchContent.css
@@ -100,7 +100,6 @@
   text-align: right;
   width: 100%;
   min-height: 3vw;
-  margin-bottom: 3vw;
 }
 
 .keyword {
@@ -110,7 +109,7 @@
   display: block;
   float: left;
   user-select: none;
-  margin-right: 0.5vw;
+  margin: 0 0.5vw 0.5vw 0;
 }
 
 .keyword p {
@@ -121,12 +120,12 @@
 .deleteKeyword {
   position: relative;
   border: none;
-  background-color: transparent;
   outline: none;
+  background-color: transparent;
 }
 
 .deleteKeyword > img {
-  width: 0.3vw;
+  width: 1vw;
   opacity: 0.4;
   cursor: pointer;
 }
