--- a/client/src/pages/responsibleCSS/mobileNav.css
+++ b/client/src/pages/responsibleCSS/mobileNav.css
@@ -64,7 +64,7 @@
     padding: 2vw 2vw 1vw 2vw;
     border-radius: 5vw;
     border: 1px solid rgba(0, 0, 0, 0.2);
-    background-color: transparent;
+    background-color: #fff;
   }
   
   .menuBtnIcon {
